--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   file_manager: ^1.0.0
   ftpconnect: ^2.0.7
   permission_handler: ^11.3.0
+  carousel_slider : ^4.0.0
+  supabase: ^2.0.8
 
 dev_dependencies:
   flutter_test:
