--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   permission_handler: ^11.3.0
   carousel_slider : ^4.0.0
   supabase: ^2.0.8
+  supabase_flutter: ^2.3.4
 
 dev_dependencies:
   flutter_test:
