--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider : ^4.0.0
   supabase: ^2.0.8
   supabase_flutter: ^2.3.4
+  crypt: ^4.3.1
 
 dev_dependencies:
   flutter_test:
